--- a/translations/CMakeLists.txt
+++ b/translations/CMakeLists.txt
@@ -9,6 +9,7 @@ set (${CMAKE_PROJECT_NAME}_TRS
   ${CMAKE_PROJECT_NAME}_es.ts
   ${CMAKE_PROJECT_NAME}_it.ts
   ${CMAKE_PROJECT_NAME}_ja.ts
+  ${CMAKE_PROJECT_NAME}_zh_CN.ts
 )
 
 set(TR_OPTIONS -no-ui-lines -locations none -silent)
