feat(i18n): add Brazilian Portuguese (pt_BR) translation
Adds full Brazilian Portuguese translation for Deskflow UI,
including menus, dialogs and system messages.
Updates language map and CMakeLists accordingly.

--- a/translations/CMakeLists.txt
+++ b/translations/CMakeLists.txt
@@ -9,6 +9,7 @@ set (${CMAKE_PROJECT_NAME}_TRS
   ${CMAKE_PROJECT_NAME}_es.ts
   ${CMAKE_PROJECT_NAME}_it.ts
   ${CMAKE_PROJECT_NAME}_ja.ts
+  ${CMAKE_PROJECT_NAME}_pt_BR.ts
   ${CMAKE_PROJECT_NAME}_zh_CN.ts
   ${CMAKE_PROJECT_NAME}_ru.ts
   ${CMAKE_PROJECT_NAME}_ko.ts
